# mdlr

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Taskfile.yml  mise.toml  roadmap.md
.claude/commands/: auto-improve.md
crates/mdlr/: Cargo.toml  build.rs
crates/mdlr-core/: Cargo.toml
crates/mdlr-core/src/: extractor.rs  lib.rs
crates/mdlr-core/src/graph/: builder.rs  mod.rs  serialize.rs  types.rs
crates/mdlr-extract-py/: Cargo.toml
crates/mdlr-extract-py/src/: branches.rs  branches_test.rs  calls.rs  calls_test.rs  cognitive.rs  cognitive_test.rs  field_access.rs  field_access_test.rs  lib.rs  scopes.rs  scopes_test.rs  tokenizer.rs  visitor.rs
crates/mdlr-extract-rust/: Cargo.toml  build.rs
crates/mdlr-extract-rust/src/: branches.rs  calls.rs  cognitive.rs  executor.rs  extractor.rs  field_access.rs  lib.rs  main.rs  path_util.rs  scopes.rs  test_crate.rs  tokenizer.rs  visitor.rs  walk.rs
crates/mdlr-extract-rust/src/resolve/: call_resolution.rs  cargo.rs  import_resolution.rs  item_extraction.rs  mod.rs  modules.rs  resolve.rs  uses.rs
crates/mdlr-extract-rust/tests/: extraction.rs
crates/mdlr-extract-ts/: Cargo.toml
crates/mdlr-extract-ts/src/: branches.rs  calls.rs  cognitive.rs  field_access.rs  lib.rs  scopes.rs  tokenizer.rs  visitor.rs
crates/mdlr-extract-ts/tests/: cpd.rs  extraction.rs
crates/mdlr-hir-extract/: Cargo.toml
crates/mdlr-hir-extract/src/: branches.rs  calls.rs  field_access.rs  main.rs  visitor.rs
crates/mdlr-metrics/: Cargo.toml
crates/mdlr-metrics/src/: complexity.rs  display.rs  file_loc.rs  lib.rs  struct_metrics.rs  structural.rs  tags.rs  thresholds.rs
crates/mdlr/src/: check.rs  check_output.rs  check_scope.rs  cli.rs  extraction.rs  git_diff.rs  ignore_commands.rs  json_output.rs  main.rs  metrics_commands.rs  metrics_rows.rs  prompt.md  symbol_commands.rs  tag_commands.rs  timing.rs  walk.rs
crates/mdlr/src/cache/: ignores_store.rs  mod.rs  store.rs  tags_store.rs  types.rs
crates/mdlr/src/config/: loader.rs  mod.rs  types.rs
crates/mdlr/src/git/: detector.rs  mod.rs
docs/: README.md
docs/getting-started/: quick-start.md
docs/metrics/: complexity.md  dag-density.md  fan-in.md  fan-out.md  impl-metrics.md  interpreting-results.md  overview.md
docs/plans/: 2026-01-31-false-positive-reduction.md  2026-02-01-lcom-ratio-formulations.md  standalone-extract.md
docs/reference/: cache.md  cli.md  config.md  graph.md  hir-extract.md  releasing.md
src/: cli.rs  lib.rs  main.rs  walk.rs
src/cache/: mod.rs  store.rs  types.rs
src/config/: loader.rs  mod.rs  types.rs
src/extract/: rust.rs  types.rs
src/graph/: serialize.rs  types.rs
src/metrics/: complexity.rs  display.rs  impl_metrics.rs  mod.rs  structural.rs  tags.rs
src/resolve/: cargo.rs  mod.rs  modules.rs  resolve.rs  uses.rs
tools/mdlr-extract-rust/: Cargo.toml
tools/mdlr-extract-rust/src/: branches.rs  calls.rs  executor.rs  field_access.rs  main.rs  visitor.rs
