[workspace]
resolver = "2"
members = [
    "crates/mdlr-core",
    "crates/mdlr-metrics",
    "crates/mdlr",
    "tools/mdlr-extract-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
mdlr-core = { path = "crates/mdlr-core" }
mdlr-metrics = { path = "crates/mdlr-metrics" }

# External dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde_yaml = "0.9"
ignore = "0.4"
tabwriter = "1.4.1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
