[package]
name = "mdlr-extract-py"
version.workspace = true
edition.workspace = true

[dependencies]
mdlr-core = { workspace = true }
mdlr-cpd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
