[package]
name = "mdlr-extract-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mdlr-extract-rust"
path = "src/main.rs"

[dependencies]
mdlr-core = { path = "../mdlr-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cargo = "0.87"
cargo-util = "0.2"
clap = { version = "4", features = ["derive"] }
