[package]
name = "mdlr-extract-rust"
version.workspace = true
edition = "2021"

[dependencies]
mdlr-core = { workspace = true }
mdlr-cpd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ra_ap_hir = { workspace = true }
ra_ap_syntax = { workspace = true }
ra_ap_load-cargo = { workspace = true }
ra_ap_ide_db = { workspace = true }
ra_ap_vfs = { workspace = true }
ra_ap_project_model = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
