[package]
name = "mdlr-extract-ts"
version.workspace = true
edition.workspace = true

[dependencies]
mdlr-core = { workspace = true }
mdlr-cpd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_visit = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
