[package]
name = "mdlr"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mdlr"
path = "src/main.rs"

[dependencies]
mdlr-core = { workspace = true }
mdlr-metrics = { workspace = true }
mdlr-extract-rust = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
ignore = { workspace = true }
tabwriter = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
