[package]
name = "mdlr-extract-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mdlr-extract-rust"
path = "src/main.rs"

[dependencies]
mdlr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
cargo = "0.87"
cargo-util = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
